[package]
name = "cuda-doctor"
version = "0.1.0"
edition = "2021"

[lib]
name = "cuda_doctor"
path = "src/lib.rs"

[[bin]]
name = "cuda-doctor"
path = "src/main.rs"

[dependencies]
walkdir = "2.4"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }